# JustOnce

./: .gitignore  .gitmodules  CMakeLists.txt  license.md  makefile  readme.md
src/: main.c
src/JustOnce/: JustOnce.c  JustOnce.h  hmac.c  hmac.h  key.c  key.h  misc.c  misc.h  otp.c  otp.h  randolph-arc4-nix.c  randolph-arc4-win.c  randolph.h  timing.c  timing.h
src/baseencode/: base64.c
src/hmac/: hmac.h  hmac_sha1.c
src/sha/: sha.h  sha1.c
test/: main.c  test-hmac.h  test-key.h  test-misc.h  test-otp.h  test-timing.h  testly.h
test/testly/: assert.c  assert.h  collect.h  run.h
